# metaexpert

./: .env.example  .env.vault  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  HOW_TO_CREATE_PULL_REQUESTS.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METAEXPERT.md  PULL_REQUEST_INSTRUCTIONS.md  QWEN.md  README.md  TASKS.md  analysis_prompt.md  find_function.py  jsconfig.json  metaexpert-cli-tasks(en-ru).md  package-lock.json  package.json  poetry.pyproject.toml  project.md  pyproject.toml  pytest_output.txt  run_logger_tests.py  task-list.mdc.md  test_cli.py  test_logger_basic.py  tsconfig.json  vite.config.js  vite.config.ts
.drafts/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
.githooks/: README.md  post-merge  pre-commit
.github/workflows/: publish.yml
.kilocode/rules/: commit-workflow.md  language-preferences.md  project-preferences.md  template-protection.md  test-driven-workflow.md  versioning-and-release-sop.md  versioning-conventions.md
.rules/: cli-specification.md  project.md  spec-cli.md  spec-logging.md
.specify/checklists/: requirements.md
.specify/memory/: constitution-amendment-summary.md  constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.trae/rules/: task-list.mdc.md
api/binance/: pyproject.toml
api/bybit/: pyproject.toml
api/src/: __init__.py
app/: .gitignore  jsconfig.json  package.json  pyproject.toml  tailwind.config.js
app/src/: __init__.py  _chart.py  app.py
app/src/templates/components/: component.menu.tmpl
app/src/templates/containers/: footer.tmpl
app/src/templates/layouts/: blank.tmpl
app/src/templates/views/: home.tmpl
app/static/scss/: _variables.scss
app/templates/components/: chart.tmpl
app/templates/containers/: header.tmpl
conductor/: tracks.md
data/: 15minutes_2020.csv  candles_BNBUSDT_1h.csv  daily_2020.csv  ohlcv.csv
demo-uv-lib/: pyproject.toml
demo-uv-maturin-ext/: Cargo.toml  pyproject.toml
demo-uv-maturin-ext/src/: lib.rs
demo-uv-maturin-ext/src/demo_uv_maturin_ext/: __init__.py
demo-uv-pkg/: pyproject.toml
demo-uv-pkg/src/demo_uv_pkg/: __init__.py
docs/: CLI_GUIDE.md  COMMAND_REFERENCE.md  EXTENDING_CLI.md  README.md  TROUBLESHOOTING.md  cli.md  cli_ru.md  configuration.md  exceptions.md  template.md
docs/EXAMPLES/: README.md  backtesting_a_strategy.md  creating_an_expert.md  extending_the_cli.md  managing_experts.md
docs/api/: README.md
docs/guides/: README.md  cli.md  logger.md  logger2.md  troubleshooting.md
examples/: README.md  bot_ema.py  expert_ema.py  pyproject.toml
examples/expert_binance_ema/: .env.example  README.md  __main__.py  main.py  metaexpert.md  pyproject.toml
examples/expert_bybit_rsi/: .env.example  README.md  __main__.py  pyproject.toml
examples/expert_mexc_psar/: .env.example  README.md  pyproject.toml
examples/expert_okx_macd/: .env.example  README.md  pyproject.toml
examples/src/: bot_ema.py
python/: .gitignore  __init__.py  _chart.py  main.py  poetry.pyproject.toml  pyproject.toml  uv.pyproject.toml
python-tmp/: .gitignore
python-tmp/src/: __init__.py  _ta.py  _websocket_stream.py  app.py  config.py  flask_app.py
python/app/: __init__.py  app.py  pyproject.toml
python/app/src/: _chart.py
python/binance/: pyproject.toml
python/binance/src/: binance.py
python/examples/: bot_ema.py
python/examples/bot_ema/: pyproject.toml
python/examples/bot_ema/src/: bot_ema.py
python/examples/ema/: pyproject.toml
python/expert/: pyproject.toml
python/expert/src/: __init__.py  _trade.py  expert.py
python/src/: _binance.py  _chart.py  _logger.py
python/src/app/: __init__.py
python/src/expert/: _expert.py  _market.py  _trade.py
rust/: .gitignore  Cargo.toml
rust/src/: config.rs  main.rs
specs/001-analysis-and-enhancement/: config-research.md  execution-report.md  manual-testing.md  plan.md  research.md  spec.md  tasks.md  workspace-cleanup-summary.md
specs/001-logging-system/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-logging-system-spec/: plan.md  research.md  spec.md
specs/001-unified-trading-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-logging-enhancement/: execution-report.md  implementation-summary.md  plan.md  quickstart.md  spec.md  task-generation-completion-report.md  tasks.md
specs/002-refactor-enhance-logger-module/: data-model.md  performance_test.py  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cli-enhancement/: implementation-summary.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-cli-new-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-exception-handling/: execution-report.md  implementation-summary.md  plan.md  quickstart.md  research.md  tasks.md
specs/004-project-specification/: spec.md
specs/005-unified-trading-interface-spec/: spec.md
specs/cli-module/: spec.md
specs/logger-improvement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/master/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/: __init__.py  _binance.py  _chart.py  _expert.py  _logger.py  _trade.py  app.py  arguments.py  binance.py  chart.ts  config.py  expert.py  index.html  logger.json  logger.py  main.py  main.ts  trade.py
src/api/: pyproject.toml
src/app/: jsconfig.json  pyproject.toml  tailwind.config.js
src/configs/: logger.json
src/data/: candles_BTCUSDT_1m.csv
src/expert/: __init__.py  __version__.py  _expert.py  _market.py  _trade.py
src/layouts/: base.tmpl  blank.tmpl
src/lib/: argument_group_manager.py  argument_validation.py  help_generator.py
src/logger/: __init__.py
src/metaexpert/: __init__.py  __main__.py  __version__.py  _argument.py  (+32 more)
src/tmp/: pyproject.toml
src/tmp/src/: _postgresql.py  _websocket_subscribe.py  main.py
tests/: test_logger.py  test_logger_integration.py
typescript/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+440 files in other folders)
