[project]
name = "metaexpert"
version = "0.1.0"
description = "MetaExpert is a Python library for cryptocurrency trading that provides a unified interface for multiple exchanges and trading types. The system is designed to be modular, extensible, and easy to use while maintaining high performance and reliability."
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "trading",
    "crypto",
    "binance",
    "technical analysis",
    "finance",
    "investment",
]
dependencies = [
    "websocket-client>=1.9.0",
]

[project.urls]
homepage = "https://teratron.github.io/metaexpert"
documentation = "https://teratron.github.io/metaexpert/docs"
repository = "https://github.com/teratron/metaexpert.git"

[project.scripts]
metaexpert = "metaexpert.__main__:main"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "pyleak>=0.1.11",
    "pyright>=1.1.406",
    "specify-cli",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.14.0",
]
docs = []

[tool.uv]
package = true
link-mode = "copy"
default-groups = [
    "dev",
    "test",
    "lint",
    "docs",
]

[tool.uv.sources]
specify-cli = { git = "git+https://github.com/github/spec-kit" }

[tool.uv.workspace]
members = [
    "examples/expert_binance_ema",
    "examples/expert_bybit_rsi",
    "examples/expert_okx_macd",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # flake8-noqa
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["metaexpert"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
pythonPlatform = "Darwin"
include = [
    "src/metaexpert",
    "examples",
    "tests",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
ignore = [
    "tests/**",
]
defineConstant = { "DEBUG" = true }
typeshedPath = ""
stubPath = ""
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
enableTypeIgnoreComments = true
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportMissingSuperCall = "none"
reportUninitializedInstanceVariable = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "none"
reportPropertyTypeMismatch = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportInconsistentConstructor = "error"
