[project]
name = "metaexpert"
version = "0.5.1"
description = "MetaExpert is a Python library for cryptocurrency trading that provides a unified interface for multiple exchanges and trading types. The system is designed to be modular, extensible, and easy to use while maintaining high performance and reliability."
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "trading",
    "forex",
    "crypto",
    "binance",
    "bybit",
    "okx",
    "mexc",
    "technical analysis",
    "finance",
    "investment",
]
dependencies = [
    "pydantic>=2.12.3",
    "websockets>=16.0.0",
]

[project.urls]
homepage = "https://teratron.github.io/metaexpert"
documentation = "https://teratron.github.io/metaexpert/docs"
repository = "https://github.com/teratron/metaexpert.git"

[project.scripts]
metaexpert = "metaexpert:main"
generate-docs = "scripts.generate_docs:main"
# example-binance = "examples/example_binance_ema:main"
# example-bybit = "examples/example_bybit_rsi:main"
# example-okx = "examples/example_okx_macd:main"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
	"pyrefly>=0.57.1"
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
]
lint = [
    "ruff>=0.14.3",
]
docs = [
    "mkdocs-material>=9.6.23",
]

[tool.uv]
package = true
link-mode = "copy"

[tool.uv.workspace]
members = [
    "examples/expert_binance_ema",
    "examples/expert_bybit_rsi",
    "examples/expert_okx_macd",
    "examples/expert_mexc_psar",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py312"
src = [
    "src",
    "examples",
    "tests",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "template.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # flake8-noqa
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    #"N805",   # First argument of a method should be named `self` (ignored for Pydantic validators)
]

[tool.ruff.lint.isort]
known-first-party = ["metaexpert"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyrefly]
project-includes = [
    "src/metaexpert",
    "examples",
    "tests",
]
