[project]
name = "demo-uv-maturin-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
demo-uv-maturin-ext = "demo_uv_maturin_ext:main"

[tool.maturin]
module-name = "demo_uv_maturin_ext._core"
python-packages = ["demo_uv_maturin_ext"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
