[project]
name = "binance-expert"
version = "0.1.0"
description = "Application for Binance expert"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "binance-connector>=3.12.0",
    "flask>=3.1.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    #"ta-lib",
    "uv>=0.6.2",
]

[project.scripts]
dotenv-pull = "npx dotenv-vault@latest pull"
dotenv-push = "npx dotenv-vault@latest push"
flask-run = "flask --app src/app run"
clean-cache = "poetry cache clear pypi --all && poetry cache clear _default_cache --all"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.5",
    "python-dotenv-vault>=0.6.4",
]
test = [
    "pytest>=8.3.4",
]
docs = [
    "sphinx>=4.3.0",
]

[tool.uv]
package = false
link-mode = "copy"
default-groups = [
    "test",
    "docs",
]

#[tool.uv.sources]
#ta-lib = [
#    { url = "https://github.com/cgohlke/talib-build/releases/download/v0.4.29/TA_Lib-0.4.29-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win64'" },
#    { index = "pypi", marker = "sys_platform == 'linux'" },
#]

[tool.ruff]
#line-length = 99
src = ["src"]

workspace = "src"
