[project]
name = "expert-binance-ema"
version = "0.1.0"
description = "EMA expert for Binance"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "metaexpert",
    #"pandas",
    #"python-dotenv",
    #"binance-connector>=3.9.0",
]

[tool.uv.sources]
metaexpert = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#files = ["expert_binance_ema.py"]