[project]
name = "expert-bybit-rsi"
version = "0.1.0"
description = "RSI expert for Bybit"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "metaexpert",
    #"pandas",
    #"python-dotenv",
    #"pybit>=5.10.1",
    #"ta-lib==0.6.3",
]

[tool.uv.sources]
metaexpert = { workspace = true }
#ta-lib = { url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp311-cp311-win_amd64.whl" }
#ta-lib = [
    #{ url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win64'" },
    #{ index = "pypi", marker = "sys_platform == 'linux'" },
#]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#files = ["expert_bybit_rsi.py"]