[project]
name = "expert-bybit-rsi"
version = "0.1.0"
description = "RSI expert for Bybit"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "metaexpert",
    "python-dotenv",
]

[tool.uv.sources]
metaexpert = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
