[project]
name = "expert-binance"
version = "0.1.0"
description = "Binance API"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "binance-connector>=3.12.0",
]

#[project.scripts]
#clean-cache = "poetry cache clear pypi --all && poetry cache clear _default_cache --all"

#[tool.uv.sources]
#expert = { workspace = true, path = "src/expert" }
#examples = { workspace = true, path = "src/examples" }
#
#[tool.uv.workspace]
#members = ["examples/*", "src/*" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"