[project]
name = "binance-bot-ema"
version = "0.1.0"
description = "EMA bot for Binance"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "expert",
    "ta-lib; python_version >= '3.11'",
]

[project.scripts]
bot-ema = "examples:bot_ema"

[tool.uv.sources]
expert = { workspace = true }
ta-lib = [
    { url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'Win64'" },
    #{ index = "pypi", marker = "sys_platform == 'Linux'" },
]
