[project]
name = "binance-bot-ema"
version = "0.1.0"
description = "EMA bot for Binance"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "expert"
]

[project.scripts]
bot-ema = ""

[dependency-groups]
dev = [
]
test = [
]
docs = [
]

[tool.uv.sources]
expert = { workspace = true, path = "python/src/expert" }
